--- a/apps/appointment-api/src/main/resources/application.properties
+++ b/apps/appointment-api/src/main/resources/application.properties
@@ -7,3 +7,4 @@ quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/appointment_quarkus
 
 # drop and create the database at startup (use `update` to only update the schema)
 quarkus.hibernate-orm.database.generation=drop-and-create
+quarkus.hibernate-orm.packages=appointment.backend.infrastructure.persistence.entities
