--- a/building-blocks/infrastructure/pom.xml
+++ b/building-blocks/infrastructure/pom.xml
@@ -13,9 +13,15 @@
     <artifactId>infrastructure</artifactId>
 
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
     </properties>
 
+    <dependencies>
+
+    </dependencies>
+    <build>
+        <plugins>
+
+        </plugins>
+    </build>
 </project>
