--- a/apps/appointment-api/pom.xml
+++ b/apps/appointment-api/pom.xml
@@ -16,22 +16,7 @@
 
     </properties>
     <dependencies>
-        <dependency>
-            <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-smallrye-openapi</artifactId>
-        </dependency>
 
-
-        <dependency>
-            <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-junit5</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>io.rest-assured</groupId>
-            <artifactId>rest-assured</artifactId>
-            <scope>test</scope>
-        </dependency>
 
         <dependency>
             <groupId>prototype.appointment.backend</groupId>
@@ -42,10 +27,23 @@
 
     <build>
         <plugins>
-            <plugin>
-                <artifactId>maven-site-plugin</artifactId>
-                <version>${site-plugin.version}</version>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>io.smallrye</groupId>-->
+<!--                <artifactId>jandex-maven-plugin</artifactId>-->
+<!--                <version>${jandex-maven-plugin.version}</version>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <id>make-index</id>-->
+<!--                        <goals>-->
+<!--                            <goal>jandex</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--            </plugin>-->
+<!--            <plugin>-->
+<!--                <artifactId>maven-site-plugin</artifactId>-->
+<!--                <version>${site-plugin.version}</version>-->
+<!--            </plugin>-->
         </plugins>
     </build>
 
